# InnovationSprint2025_Extending_Software_Metadata

./: README.md  example_fullcodemeta_schemajsonld.json  schema.org_codemeta-compliant.json  sunpy_extracted_codemeta.json  sunpy_extracted_schema_codemeta.json
Landscape Analysis/: Existing Resources _ Projects.xlsx
Research_Software_Metadata_Analysis/: .gitignore  LICENSE  README.md  STRUCTURE.md  codemeta-repos.csv  pyproject.toml
Research_Software_Metadata_Analysis/analysis-results/: codemeta_analysis_summary.csv
Research_Software_Metadata_Analysis/analysis_results/: README
Research_Software_Metadata_Analysis/src/rsma/: analysis.py  cli.py  file_io.py  github_client.py  parsing.py  settings.py
Research_Software_Metadata_Analysis/src/rsma/schemas/: codemeta_schema_3.0.0.json
Research_Software_Metadata_Analysis/usage_csvs/: README  codemeta.csv  zenodo.csv
